--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <section class="intro">
       <div class="image">
         <div class="texture"></div>
+        <img src="images\leadingindia2018-08-07.png">
         <img src="https://avatars1.githubusercontent.com/u/20199181?s=400" alt="Nitesh Kumar Niranjan">
       </div>
       <div class="text">
