--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="intro">
       <div class="image">
         <div class="texture"></div>
-        <img src="images\leadingindia2018-08-07.png">
+        <img src="images\leadingindia2018-08-07.png" alt="path-to-ai">
       </div>
       <div class="text">
         <h1 class="title">Hey there!</h1>
