--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Nitesh Kumar Niranjan's Portfolio">
   <meta name="google-site-verification" content="J4fO40HbaHSyn_k-hpxW3mzSDGtJvhIX_K7B74NYKIA" />
-  <title>Nitesh Kumar Niranjan</title>
+  <title>Path To AI/workshops</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
