--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </div>
       <div class="text">
         <h1 class="title">Hey there!</h1>
-        <p>My name is Nitesh Kumar Niranjan. I am a 16-year-old designer, developer and thinker based in India.</p>
-        <p>I design and build full-stack web applications.</p>
+        <p> This site is under construction </p>
+        <p>Using Nitesh Kumar Niranjan's theame</p>
       </div>
     </section>
 
