--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="text">
         <h1 class="title">Hey there!</h1>
         <p> This site is under construction </p>
-        <p>Using Nitesh Kumar Niranjan's theame</p>
+        <p>Using Nitesh Kumar Niranjan's theame. Using Nitesh Kumar Niranjan's theame. Using Nitesh Kumar Niranjan's theame</p>
       </div>
     </section>
 
