--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <div class="main">
 
-    <div class="logo" id="about">Nitesh Kumar <span>Niranjan</span></div>
+    <div class="logo" id="about">Path To AI <span>Niranjan</span></div>
 
     <section class="intro">
       <div class="image">
